dev/devops-303-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: devops-303
  labels: 
    app: devops-303
spec: 
  selector:
    matchLabels:
      app: devops-303
  replicas: 3
  template: 
    metadata:
      labels: 
        app: devops-303
    spec: 
      containers: 
        - name: devops-303 
          image: devops-303
          imagePullPolicy: Never
          ports: 
            - containerPort: 80
          resources: 
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
