dev/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dev
  name: redis
  labels: 
    app: redis
spec: 
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template: 
    metadata:
      labels: 
        app: redis
    spec: 
      containers: 
        - name: redis
          image: redis:latest
          ports: 
            - containerPort: 6379
              protocol: TCP
          resources: 
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
