dev/devops-303-service.yml
apiVersion: v1
kind: Service
metadata: 
  namespace: dev
  name: devops-303
spec: 
  selector: 
    app: devops-303
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 8884
