dev/redis-service.yml
apiVersion: v1
kind: Service
metadata: 
  namespace: dev
  name: redis
spec: 
  selector: 
    app: redis
    type: ClusterIP
  ports: 
    - name: tcp-port
      protocol: TCP
      port: 6379
      targetPort: 6379
