dev/redis-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: redis
spec:
  rules:
    - host: redis.glenn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis
                port:
                  number: 6379
